# imwrap-v6

./: .gitignore  CMakeLists.txt  COPYRIGHT  Package.swift  README.md  README_fr.md  THIRD_PARTY_LICENSES.md  TODO.txt  _reflect_ags.cs  build_log.txt  check_arch.cmd  diff.txt  diff_ags.txt  diff_engine.txt  diff_todo.txt  dump_soun.py  patch.py  restore_ui.py  update_braces.py  update_docs.py  update_marker_docs.py
.github/workflows/: release-v1.yml
ags-editor-plugin/: AGS.Plugin.IMWrap.Editor.csproj  AGS.Plugin.Imuse.Editor.csproj  README.md  README_fr.md
ags-editor-plugin/Properties/: AssemblyInfo.cs
ags-editor-plugin/src/: EmbeddedIconLoader.cs  IMWrapBankCodec.cs  IMWrapBankFileService.cs  IMWrapBankLoader.cs  IMWrapBankModels.cs  IMWrapEditorComponent.cs  IMWrapEditorPane.cs  IMWrapEditorPlugin.cs  ImuseBankCodec.cs  ImuseBankFileService.cs  ImuseBankLoader.cs  ImuseBankModels.cs  ImuseEditorComponent.cs  ImuseEditorPane.cs  ImuseEditorPlugin.cs  TextPromptDialog.cs
ags-wrapper/: IMWrapShim.cs  IMWrapShim.vb  ImuseShim.cs  ImuseShim.vb
baka/midiseqs/: artiroom.mid  artisus.mid  bakamusic.ims
build_gui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  agsimuse.vcxproj  agsimuse.vcxproj.filters  cmake_install.cmake  imsprobe.vcxproj  imsprobe.vcxproj.filters  imuse_packer_gui.vcxproj  imuse_packer_gui.vcxproj.filters  imuse_player_gui.vcxproj  imuse_player_gui.vcxproj.filters  imuse_setmidi.vcxproj  imuse_setmidi.vcxproj.filters  imuse_shim.vcxproj  imuse_shim.vcxproj.filters  imuse_sysex_gui.vcxproj  imuse_sysex_gui.vcxproj.filters  imuse_v6.sln  imuse_v6.vcxproj  imuse_v6.vcxproj.filters  imuse_v6_shared.vcxproj  imuse_v6_shared.vcxproj.filters  imusepack.vcxproj  imusepack.vcxproj.filters
build_gui/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_gui/Release/: ADLMIDI.lib  agsimuse.exp  agsimuse.lib  imuse_v6.lib  imuse_v6_static.lib
build_gui/imuse_packer_gui_autogen/: mocs_compilation_Release.cpp
build_gui/imuse_player_gui_autogen/: mocs_compilation_Release.cpp
build_gui/imuse_setmidi_autogen/: mocs_compilation_Release.cpp
build_gui/imuse_sysex_gui_autogen/: mocs_compilation_Release.cpp
build_mingw32/: CMakeCache.txt  Makefile  cmake_install.cmake
build_msvc_win32/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  agsimuse.vcxproj  agsimuse.vcxproj.filters  cmake_install.cmake  imsprobe.vcxproj  imsprobe.vcxproj.filters  imuse_setmidi.vcxproj  imuse_setmidi.vcxproj.filters  imuse_shim.vcxproj  imuse_shim.vcxproj.filters  imuse_v6.sln  imuse_v6.vcxproj  imuse_v6.vcxproj.filters  imuse_v6_shared.vcxproj  imuse_v6_shared.vcxproj.filters  imusepack.vcxproj  imusepack.vcxproj.filters  test_crash.vcxproj  test_crash.vcxproj.filters
build_msvc_win32/Release/: ADLMIDI.lib  agsimuse.exp  agsimuse.lib  imuse_shim.exp  imuse_shim.lib  imuse_v6.lib  imuse_v6_dll.exp  imuse_v6_dll.lib  imuse_v6_static.lib
build_nmake/: CMakeCache.txt  Makefile  cmake_install.cmake
build_validate_win32/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  agsimwrap.vcxproj  agsimwrap.vcxproj.filters  cmake_install.cmake  imwrap_v6.sln  imwrap_v6.vcxproj  imwrap_v6.vcxproj.filters
build_validate_win32/Release/: ADLMIDI.lib  agsimwrap.exp  agsimwrap.lib  imwrap_v6_static.lib
docs/: ags-plugin.md  ags-plugin_en.md  guide_compositeur.md  guide_compositeur_fr.md  ims-v1.md  imusepack.md  imwrap_api_documentation_en.md  imwrap_api_documentation_fr.md  imwrap_sysex_format.md  imwrap_sysex_reference_detaillee_en.md  imwrappack.md  imwrappack_en.md  release-notes-1.0.4.md  release-notes-1.4.0_en.md  windows-release.md  windows-release_en.md
docs/imwrap_manual_en/: EN_01_Home.md  EN_02_installation_and_quickstart.md  EN_03_basic_scripting.md  EN_04_interactivity.md  EN_05_composers_guide.md  EN_06_sysex_reference.md  EN_07_packaging_and_deployment.md  EN_08_ags_api_reference.md  EN_09_graphical_tools.md
docs/imwrap_manual_fr/: FR_01_introduction.md  FR_02_installation_quickstart.md  FR_03_scripting_basique.md  FR_04_interactivite.md  FR_05_guide_compositeur.md  FR_06_reference_sysex.md  FR_07_empaquetage_et_config.md  FR_08_reference_api_ags.md  FR_09_outils_graphiques.md
include/imuse/: ByteView.h  ChannelAllocator.h  Export.h  ImsFormat.h  ImsWriter.h  ImuseCommand.h  ImuseEngine.h  ImuseSequence.h  ImuseSysex.h  Instrument.h  InstrumentState.h  MidiChannel.h  MidiSink.h  ResourceBank.h  SinkMidiChannel.h  SmfSequence.h
include/imwrap/: ByteView.h  ChannelAllocator.h  Export.h  IMWrapCommand.h  IMWrapEngine.h  IMWrapSequence.h  IMWrapSysex.h  ImsFormat.h  ImsWriter.h  Instrument.h  InstrumentState.h  MidiChannel.h  MidiSink.h  ResourceBank.h  (+3 more)
legacy-tools/: README.md
samples/: openquest-lite.ims
scripts/: build-windows-release.ps1  make-app.sh  package-windows-release.ps1  patch_ims.py
src/: AgsIMWrapPlugin.cpp  AgsImusePlugin.cpp  IMWrapEngine.cpp  IMWrapEngineSerialize.cpp  IMWrapSequence.cpp  IMWrapSysex.cpp  ImsWriter.cpp  ImuseEngine.cpp  ImuseEngineSerialize.cpp  ImuseSequence.cpp  ImuseSysex.cpp  Instrument.cpp  ResourceBank.cpp  ScummAdlibPercussionData.inl  ScummAdlibSink.cpp  SinkMidiChannel.cpp  SmfSequence.cpp
swift-shim/: CIMWrapShim.cpp  CImuseShim.cpp
sysex-tool-vst/: CMakeLists.txt  README.md
sysex-tool-vst/source/: SysExToolController.cpp  SysExToolController.h  SysExToolEditor.cpp  SysExToolEditor.h  SysExToolIds.h  SysExToolModel.cpp  SysExToolModel.h  SysExToolProcessor.cpp  SysExToolProcessor.h  SysExToolStateIo.cpp  SysExToolStateIo.h  WinMidiOut.cpp  WinMidiOut.h  factory.cpp  version.h
tools/: ims2soun.c  imsprobe.cpp  imusepack.cpp  imwrappack.cpp  kogxor.c
(+346 files in other folders)
